# Weather-station

./: AI_weatherStation_v10.py  AI_weatherStation_v11.py  README.md  coap_server.py  data_seeder.py  hourly_model_training.py  hourly_predictor.py  random_data_generator.py  test_connection.py  testing.py  training_data.csv  training_dataset.csv  weather_station.db  weather_station_json.json  weatherstation_credentials.json  weekly_model_training.py  weekly_predictor.py
bosch_180/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
bosch_180/drivers/sensor/: Kconfig
bosch_180/src/: app.overlay  main.c
project_udp_coap_sender/: CMakeLists.txt  Kconfig  nrf52840dk_nrf52840.overlay  prj.conf
project_udp_coap_sender/drivers/sensor/: CMakeLists.txt
project_udp_coap_sender/drivers/sensor/bmp180/: CMakeLists.txt  bmp180.c
project_udp_coap_sender/drivers/sps30/: hal.c  sensirion_arch_config.h  sensirion_common.c  sensirion_common.h  sensirion_i2c.h  sps30.c  sps30.h  sps_git_version.h
project_udp_coap_sender/src/: main.c
sensor_SPS30/: CMakeLists.txt  README.rst  nrf52840dk_nrf52840.overlay  prj.conf
sensor_SPS30/src/: hal.c  main.c  sensirion_arch_config.h  sensirion_common.c  sensirion_common.h  sensirion_i2c.h  sps30.c  sps30.h  sps_git_version.h
ssns-project-react/: package-lock.json  package.json
ssns-project-react/public/: index.html
ssns-project-react/public/images/: bg.avif  indoor.avif
ssns-project-react/src/: App.css  App.js
ssns-project-react/src/Components/: Chart.jsx  Time.jsx  Weather.jsx  db.jsx
(+3 files in other folders)
